# Lazuli

./: .checklines.sh  .compile.sh  .dir-locals.el  .docker_bashrc  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  Dockerfile  Doxyfile  README.md  TODO  TODO.org  checklines.sh  doxygen_config  serial.sh  stack_usage.sh
.github/actions/: docker_container.yaml
.github/workflows/: ci_build.yaml  ci_build.yml  publish_doxygen_documentation.yml
doc/: AboutDocumentation.md  CStyleAndConventions.md  Makefile  MemoryLayout.md  Startup.md  a_simple_example.rst  conf.py  developing_your_project.rst  getting_lazuli.rst  getting_the_source.rst  glossary.rst  index.rst  introduction.rst  set_up_environment.rst
doc/kernel/: about_documentation.rst  best_practices.rst  code_style_and_conventions.rst  contributing.rst  kernel_documentation.rst  memory_layout.rst  repository_tree.rst  startup.rst  version_management.rst
docker/: docker_bashrc.sh
doxygen/head/: AVR_2stdint_8h.html  AVR_2stdint_8h_source.html  annotated.html  arch_8c.html  arch_8c_source.html  arch_8h.html  arch_8h_source.html  avr__arch_8h.html  avr__arch_8h_source.html  classes.html  clock__24_8c.html  clock__24_8c_source.html  clock__24_8h.html  clock__24_8h_source.html  common_8h.html  common_8h_source.html  compiler_8h.html  compiler_8h_source.html  config_8h.html  config_8h_source.html  config__static__analysis_8h.html  config__static__analysis_8h_source.html  dir_1ab988b89899d808dec13f21e954750b.html  dir_2c76719cbbaa00d026c103b7e6044a84.html  dir_2dd815e5edbc970a106bc6affc163670.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_698bddff2e761de6e9782d7bfce4d6e9.html  dir_82b28cf585cc562d050777e6049860ae.html  dir_8a1ca53c80db0f9295cea0aa0b7d7d85.html  dir_8e8e96bba8785afce219c5d5ccd04693.html  dir_9498c7293f12fd336394a894124e87a9.html  dir_ac8a973f80a167532136a9adcc04c0ca.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b3f7c4ed18274c9e10d453b4439d6e45.html  dir_b7ab6737f75a53dbbaecc997fc06cfaa.html  dir_bb0c624623c6c0f9ec12d3ffb7069962.html  dir_bc34e4fc9bb59839baf28ad01d83aa17.html  dir_ce612cfd41ddaf1893948474748bf966.html  dir_d1bb37196204a921a1a2e27a07d5d9b6.html  dir_e39282403b26f202695773646ce59e2c.html  (+109 more)
doxygen/latest/: AVR_2stdint_8h.html  AVR_2stdint_8h_source.html  annotated.html  arch_8c.html  arch_8c_source.html  arch_8h.html  arch_8h_source.html  avr__arch_8h.html  avr__arch_8h_source.html  classes.html  clock__24_8c.html  clock__24_8c_source.html  clock__24_8h.html  clock__24_8h_source.html  common_8h.html  common_8h_source.html  compiler_8h.html  compiler_8h_source.html  config_8h.html  config_8h_source.html  config__static__analysis_8h.html  config__static__analysis_8h_source.html  dir_06954a9e998b1e422f143bfc7f1d14ef.html  dir_12293b21ad9e3d0e662f370fd4c19219.html  dir_1ab988b89899d808dec13f21e954750b.html  dir_287e82637dbbb4ab364345b464c9b10f.html  dir_2c76719cbbaa00d026c103b7e6044a84.html  dir_2dd815e5edbc970a106bc6affc163670.html  dir_37f7dc87c76fa776eea6cfba18ee9943.html  dir_38dd48e34a570d315d4d3fa9e9918656.html  (+154 more)
example-programs/: blink.c  clock24.c  highest_priority_first.c  mutex.c  mutex_2.c  mutex_alternating_tasks.c  rms.c  round_robin.c  spinlocks.c
scripts/: check_unit_tests_output.awk  checklines.sh  clang_tidy.sh  serial.sh  sizeof_functions.sh  sizeof_sections.awk  sizeof_types.awk  stack_usage.sh
src/: .gitattributes  CMakeLists.txt  build.sh  clang_tidy.sh  clean.sh  config.h.in  debug.sh  doxygen_main_page.dox  serial.sh  sizeof_objects.awk  sizeof_sections.awk  sizeof_types.awk  upload.sh
src/cmake/: avr.toolchain.cmake  declare_lazuli_module.cmake  initial_cache.cmake  machine_choice.cmake
src/include/Lazuli/: clock_24.h  common.h  config.h  config_static_analysis.h  lazuli.h  list.h  mutex.h  scheduler.h  serial.h  spinlock.h  timers.h
src/include/Lazuli/sys/: assert.h  clock_24.h  compiler.h  config.h  kernel.h  linker.h  list.h  memory.h  memory_allocation_incremental.h  printf.h  regions.h  scheduler.h  scheduler_base.h  scheduler_hpf.h  scheduler_rms.h  scheduler_rr.h  swap.h  task.h  tasks.h
src/include/Lazuli/sys/arch/: arch.h
src/include/Lazuli/sys/arch/AVR/: arch.h  interrupts.h  registers.h  timer0.h  timer_counter_0.h  timer_counter_1.h  usart.h
src/include/sys/: arch.h  assert.h  config.h  kernel.h  linker.h  malloc.h  memory.h  registers.h  tasks.h  types.h  utils.h
src/include/sys/arch/AVR/: arch.h  registers.h  timer0.h  timer_counter_0.h
src/kern/: arch.c  clock_24.c  interrupt_vectors_table.S  kernel.c  kmain.c  linker.ld  linker.x  list.c  main.c  main_hpf.c  malloc.c  memory.c  memory_allocation_incremental.c  mutex.c  scheduler.c  scheduler_base.c  scheduler_hpf.c  scheduler_rms.c  scheduler_rr.c  serial.c  sizeof_objects.c  sizeof_types.c  spinlock.c  startup.S  swap.c  timers.c
src/kern/arch/AVR/: arch.c  asm_common.S  avr_arch.h  interrupt_vectors_table.S  linker.ld  linker.x  mutex.S  spinlock.S  startup.S  timer0.c  timer_counter_0.c  timer_counter_1.c  usart.c
src/kern/modules/clock_24/: CMakeLists.txt  clock_24.c
src/kern/modules/division/: CMakeLists.txt
src/kern/modules/division/arch/AVR/: division.S
src/kern/modules/mutex/: CMakeLists.txt  mutex.c
src/kern/modules/mutex/arch/AVR/: mutex.S
src/kern/modules/printf/: CMakeLists.txt  printf.c
src/kern/modules/printf/arch/AVR/: printf.S
src/kern/modules/serial/: CMakeLists.txt  serial.c
src/kern/modules/serial/arch/AVR/: usart.c
src/kern/modules/spinlock/: CMakeLists.txt  spinlock.c
src/kern/modules/spinlock/arch/AVR/: spinlock.S
src/kern/modules/version_string/: CMakeLists.txt  version_string.c
src/kern/unit-tests/: unit_tests.c
src/libc/: stdint_assertions.c
src/libc-headers/: stdio.h
src/libc-headers/arch-dependent/AVR/: stdarg.h  stdint.h
src/libc-headers/arch-dependent/x86_64/: stdint.h
src/modules/clock_24/: clock_24.c
src/unit-tests/: unit_tests.c
sys/: CMakeLists.txt  clean.sh  config.h.in  doxygen_main_page.dox
templates/: c_header.h  c_source.c  sh_source.sh
user/: main.c
(+480 files in other folders)
